gitops/values/gatekeeper/constraints/image-security-constraint.yml
# Application of the ImagePolicy
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sImagePolicy
metadata:
  name: image-policy
  annotations:
    argocd.argoproj.io/sync-wave: "2"
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  enforcementAction : dryrun
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
      - apiGroups: ["apps"]
        kinds: ["Deployment", "StatefulSet"]
    excludedNamespaces:
      - kube-system
#      - security
  parameters:
    approvedRegistry:
      - "titouonee/"
      - "bitnami/"
