gitops/values/gatekeeper/constraints/pod-security-constraint.yml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPodSecurityChecks
metadata:
  name: pod-security-checks
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  enforcementAction : dryrun
  match:
    kinds:
      - apiGroups: ["apps"]
        kinds: ["Deployment", "StatefulSet"] 
      - apiGroups: [""]
        kinds: ["Pod"]
    excludedNamespaces:
      - kube-system
#      - monitoring
#      - security
