gitops/values/gatekeeper/constraints/ressource-security-constraint.yml
# Application of the ResourcePolicy
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sResourcePolicy
metadata:
  name: resource-policy
  annotations:
    argocd.argoproj.io/sync-wave: "2"
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  enforcementAction : dryrun
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    excludedNamespaces:
      - kube-system
#      - monitoring
#      - security
